--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             EyeOff: (props)=><svg {...props} xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path><line x1="1" y1="1" x2="23" y2="23"></line></svg>,
             Moon: (props)=><svg {...props} xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>,
             Sun: (props)=><svg {...props} xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>,
-            Settings: (props)=><svg {...props} xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1 2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+            Settings: (props)=><svg {...props} xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1 2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
         };
 
         const BDJLogo = () => (
@@ -592,41 +592,49 @@
                 const onlineCount = onlineStreamers.size;
                 const totalStreamers = streamers.length;
 
+                // Mobile specific styles vs Desktop
+                const containerClass = "flex flex-col items-end mr-2";
+                const labelClass = "text-[8px] md:text-[10px] font-tech font-bold text-bdjGreen/70 uppercase tracking-widest text-right";
+                const statusRowClass = "flex items-center gap-1.5 md:gap-2 justify-end";
+                const dotClass = "w-1.5 h-1.5 md:w-2 md:h-2 rounded-full bg-bdjGreen shadow-[0_0_8px_#00FF40] animate-pulse";
+                const textClass = "text-[10px] md:text-xs font-bold text-white tracking-wider text-shadow text-right uppercase";
+
                 if (onlineCount === totalStreamers) {
                     return (
-                        <div className="flex flex-col items-end mr-2 animate-pulse">
-                            <span className="text-[10px] font-tech font-bold text-bdjGreen uppercase tracking-widest text-right">UM MILAGRE ACONTECEU</span>
-                            <span className="text-xs font-bold text-white tracking-wider text-shadow text-right">O BDJ INTEIRO ESTÁ ONLINE!</span>
+                        <div className={`${containerClass} animate-pulse`}>
+                            <span className={labelClass.replace('text-bdjGreen/70', 'text-bdjGreen')}>UM MILAGRE ACONTECEU</span>
+                            <span className={textClass}>O BDJ INTEIRO ESTÁ ONLINE!</span>
                         </div>
                     );
                 }
                 
                 if (onlineCount === 0) {
                      return (
-                        <div className="flex flex-col items-end mr-2">
-                            <span className="text-[10px] font-tech font-bold text-gray-500 uppercase tracking-widest text-right">System Status</span>
-                            <span className="text-xs font-bold text-gray-400 tracking-wider text-shadow text-right">TUDO OFFLINE</span>
+                        <div className={containerClass}>
+                            <span className={labelClass.replace('text-bdjGreen/70', 'text-gray-500')}>System Status</span>
+                            <span className={textClass.replace('text-white', 'text-gray-400')}>TUDO OFFLINE</span>
                         </div>
                     );
                 }
 
-                let mainText = "";
+                let mainContent;
                 if (onlineCount === 1) {
                     const id = [...onlineStreamers][0];
                     const s = streamers.find(s => s.id === id);
                     const displayNames = { jon: 'Jon', font: 'Font', mar: 'Marcove', jhow: 'Jhow' };
                     const name = s ? (displayNames[s.id] || s.name) : "Alguém";
-                    mainText = `Apenas o ${name} está online`;
+                    // Using span for green color
+                    mainContent = <>Apenas o <span className="text-bdjGreen drop-shadow-[0_0_5px_rgba(0,255,64,0.5)]">{name}</span> está online</>;
                 } else {
-                    mainText = `Apenas ${onlineCount} estão online`;
+                    mainContent = `Apenas ${onlineCount} estão online`;
                 }
 
                 return (
-                    <div className="flex flex-col items-end mr-2">
-                        <span className="text-[10px] font-tech font-bold text-bdjGreen/70 uppercase tracking-widest drop-shadow-[0_0_5px_rgba(0,255,64,0.3)] text-right">São 4 Integrantes</span>
-                        <div className="flex items-center gap-2 justify-end">
-                            <span className="w-2 h-2 rounded-full bg-bdjGreen shadow-[0_0_8px_#00FF40] animate-pulse"></span>
-                            <span className="text-xs font-bold text-white tracking-wider text-shadow text-right uppercase">{mainText}</span>
+                    <div className={containerClass}>
+                        <span className={labelClass}>São 4 Integrantes</span>
+                        <div className={statusRowClass}>
+                            <span className={dotClass}></span>
+                            <span className={textClass}>{mainContent}</span>
                         </div>
                     </div>
                 );
@@ -662,7 +670,7 @@
                         <header className="h-16 md:h-20 cyber-border-bottom flex items-center px-4 md:px-8 justify-between z-40 relative flex-shrink-0 animate-fade-in" style={{animationDelay: '0.5s', opacity: 0, animationFillMode: 'forwards'}}>
                             <div className="flex items-center gap-6"><BDJLogo /></div>
                             <div className="flex items-center gap-4">
-                                <div className="hidden md:block">
+                                <div>
                                     {renderStatusText()}
                                 </div>
                                 <div className="h-8 w-[1px] bg-bdjGreen/20 hidden md:block"></div>
