--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
             return (
                 <div 
-                    className={`relative w-full h-full flex flex-col transition-all duration-300 group`}
+                    className={`relative w-full h-full flex flex-col transition-all duration-300 group ${status === 'offline' ? 'opacity-40 grayscale hover:opacity-100 hover:grayscale-0 transition-all duration-500' : ''}`}
                     onMouseEnter={() => setIsHovered(true)}
                     onMouseLeave={() => setIsHovered(false)}
                     onClick={() => setIsHovered(prev => !prev)}
@@ -812,7 +812,7 @@
                             </div>
 
                             {/* Side Players Area */}
-                            <div className={`w-full md:w-80 flex flex-row md:flex-col gap-3 overflow-x-auto md:overflow-y-auto scrollbar-hide shrink-0 pb-2 md:pb-0 md:justify-center ${isCinemaMode ? 'hidden' : ''}`} style={{maxHeight: '100%'}}>
+                            <div className={`w-full md:w-80 flex flex-row md:flex-col gap-3 overflow-x-auto md:overflow-y-auto scrollbar-hide shrink-0 pb-2 md:pb-0 md:justify-center`} style={{maxHeight: '100%'}}>
                                 {sideStreams.map(s => (
                                     <div key={s.id} className="w-64 md:w-full aspect-video shrink-0">
                                         <StreamPlayer 
