--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="referrer" content="no-referrer-when-downgrade">
-    <meta name="description" content="BDJ - Multiview e Portal Oficial da Tropa.">
+    
+    <!-- SEO & Meta Tags Principais -->
+    <meta name="description" content="Portal Oficial BDJ Multiview. Assista Jon Vlogs, FontinnelleRJ, Marcove e JhowRJ1 simultaneamente. O maior hub de conteúdo IRL, games e lifestyle do Brasil.">
+    <meta name="keywords" content="BDJ, Jon Vlogs, Multiview, Twitch, IRL, FontinnelleRJ, Marcove, JhowRJ1, Bonde do Jon, Live, Stream, Tropa do Jon, Reality">
+    <meta name="author" content="BDJ Team">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#00FF40">
+
+    <!-- Open Graph / Facebook / WhatsApp / Discord -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bdj.multiview.com/"> <!-- URL Canônica (Exemplo) -->
+    <meta property="og:title" content="BDJ | Multiview Oficial da Tropa">
+    <meta property="og:description" content="Acompanhe a tropa ao vivo! Jon Vlogs, Fontinnelle, Marcove e Jhow em uma experiência multiview imersiva e interativa.">
+    <meta property="og:image" content="https://i.imgur.com/3EIaZHq.png">
+    <meta property="og:site_name" content="BDJ Multiview">
+    <meta property="og:locale" content="pt_BR">
+
+    <!-- Twitter / X -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bdj.multiview.com/">
+    <meta property="twitter:title" content="BDJ | Multiview Oficial">
+    <meta property="twitter:description" content="Acompanhe a tropa ao vivo! Jon Vlogs, Fontinnelle, Marcove e Jhow em uma experiência multiview imersiva.">
+    <meta property="twitter:image" content="https://i.imgur.com/3EIaZHq.png">
+    <meta property="twitter:creator" content="@JonVlogs">
+
     <title>BDJ | Multiview Oficial</title>
     
     <!-- Favicon Personalizado BDJ -->
@@ -272,7 +296,7 @@
         // --- CONSTANTS ---
         const SOCIALS = {
             jon: { instagram: 'jonvlogs', twitter: 'jonvlogs', tiktok: 'jonvlogs' },
-            font: { instagram: 'fontinnelerj', twitter: 'fontinnellerj', tiktok: 'fontinnele' },
+            font: { instagram: 'fontinnelerj', twitter: 'Fontinnele00', tiktok: 'fontinnele' },
             mar: { instagram: 'marcovebb', twitter: 'marcovebb', tiktok: 'marcovebb' },
             jhow: { instagram: 'jhowrj1', twitter: 'jhowrj1', tiktok: 'jhowrj1' }
         };
