--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module">import { inject } from 'https://esm.sh/@vercel/analytics'; inject({ mode: 'production', debug: false }); console.log("Vercel Analytics Injected");</script>
     
     <!-- Twitch Embed API Oficial -->
     <script src="https://player.twitch.tv/js/embed/v1.js"></script>
